--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Titel</title>
   </head>
   <body>
-     Hallo Welt
+    
+    <h1>Beispiel für traditionelles Event-Handling</h1>
+    <button id="interaktiv">Klick mich!</button>
+    <output></output>
+        
   </body>
 </html>
