--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="func.js" /></script>
-    <title>Titel</title>
+    <title>Rugeli's Adventsrätsel :-)</title>
   </head>
   <body>
     
-    <h1>Beispiel für traditionelles Event-Handling</h1>
-    <button id="interaktiv">Klick mich!</button>
-    <output></output>
-        
-  </body>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Titel</h1><p>Text</p>
+<button onclick="myFunction()">Click me</button>
+<p id="demo"></p>
+   
+</body>
 </html>
