--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <html>
 <body>
 
-<h1>Titel</h1><p>Text</p>
-<button onclick="myFunction()">Click me</button>
+<p>02. Dezember</p>
+  <p>Rätsel</p><button onclick="myFunction()">Check</button>
 <p id="demo"></p>
    
 </body>
