--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 
 <p>02. Dezember</p>
-  <p>Rätsel</p><button onclick="myFunction()">Check</button>
+  <p>Rätsel</p>
+  <p>Lösung: <input type="text" id="t02">
+  <button onclick="myFunction()">Check</button>
 <p id="demo"></p>
    
 </body>
