--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <p>02. Dezember</p>
   <p>Rätsel</p>
-  <p>Lösung: <input type="text" id="t02">
+  <p>Lösung: <input type="text" id="02Text">
   <button onclick="myFunction()">Check</button>
-<p id="demo"></p>
+  <p id="result"></p>
    
 </body>
 </html>
