--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 <p>02. Dezember</p>
   <p>Rätsel</p>
   <p>Lösung: <input type="text" id="02Text">
-  <button onclick="myFunction()">Check</button>
+  <button onclick="checkButton()">Check</button>
   <p id="result"></p>
    
+  <button onclick="checkDate()">Date?</button>
+   <p id="result2"></p>
+  
 </body>
 </html>
