--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 <!DOCTYPE html>
 <html>
-<body>
+<body onload="javascript:checkDate()">
 
 <p>02. Dezember</p>
   <p>Rätsel</p>
@@ -18,7 +18,7 @@
   <button onclick="checkButton()">Check</button>
   <p id="result"></p>
    
-  <button onclick="checkDate()">Date?</button>
+  
    <p id="result2"></p>
   
 </body>
