--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
 <body onload="javascript:checkDate()">
 
 <p>02. Dezember</p>
-  <p>Rätsel</p>
-  <p>Lösung: <input type="text" id="02Text">
+  <p id="puzzle">...</p>
+  <p>Lösung: <input type="text" id="loesung">
   <button onclick="checkButton()">Check</button>
-  <p id="result"></p>
-   
-  
-   <p id="result2"></p>
-  
+  <p id="hint"></p>
 </body>
 </html>
