--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
   <p>Lösung: <input type="text" id="loesung">
   <button onclick="checkButton()">Check</button>
   <p id="hint"></p>
+  
+  
+  <p id="debug"></p>
 </body>
 </html>
