--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
     div.container {
      padding: 10px;
     }
+      
+   @font-face {
+   font-family: myFirstFont;
+   src: url(sansation_light.woff);
+    }
+
+    @font-face {
+       font-family: myFirstFont;
+       src: url(sansation_bold.woff);
+       font-weight: bold;
+    }
+
+    * {
+       font-family: myFirstFont;
+    }
     </style>
   </head>
   <body>
