--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <html>
 <body onload="javascript:checkDate()">
 
-<p>02. Dezember</p>
+<h1>02. Dezember</h1>
   
 <div class="polaroid">
   <img src="xyz.jpg" alt="IMG" style="width:100%">
