--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     }
 
     div.header {
-        background-color: #4CAF50;
+        background-color: #262D69;
         color: white;
         padding: 10px;
-        font-size: 40px;
+        font-size: 20px;
     }
 
     div.container {
