--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>    
       
     div.card {
-      width: 250px;
+      width: 90%;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       text-align: center;
     }
@@ -18,7 +18,7 @@
         background-color: #262D69;
         color: white;
         padding: 10px;
-        font-size: 20px;
+        font-size: 80px;
     }
 
     div.container {
@@ -35,7 +35,7 @@
 
 <div class="card">
   <div class="header">
-   <h1>02. Dezember</h1>
+   <h1>02</h1>
   </div>
 
   <div class="container">
