--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="func.js" /></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <title>Rugeli's Adventsrätsel :-)</title>
   
     <style>    
+      
+    font-family: 'Tangerine', serif;
+        font-size: 48px;
+      }
       
     div.card {
       width: 99%;
