--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="func.js" /></script>
     <title>Rugeli's Adventsrätsel :-)</title>
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
   
-    <style>    
+    <style>
+    body {
+      font-family: 'Sofia';font-size: 22px;
+    }
       
     div.card {
       width: 99%;
