--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
     <style>
     body {
-      font-family: 'Sofia';font-size: 22px;
+      font-family: 'Advent Pro';font-size: 22px;
     }
       
     div.card {
