--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <div class="card">
   <div class="header">
-   <h1>02</h1>
+   <h1>02 DEZ</h1>
   </div>
 
   <div class="container">
@@ -48,7 +48,6 @@
     <button onclick="checkButton()">Check</button>
     <hr>
     <p id="hint"></p>
-    <br>
     <br>
   </div>
 </div>  
