--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
         padding: 10px;
     }
     
+    .button {
+    background-color: #4e8ee8;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    }
     </style>
   </head>
   <body>
