--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <p id="puzzle">...</p>
     <hr>
     <p>Lösung: <input type="text" id="loesung">
-    <button onclick="checkButton()">Check</button>
+    <button class="button" onclick="checkButton()">Check</button>
     <hr>
     <p id="hint"></p>
     <br>
