--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
     <style>
     body {
-      font-family: 'Architects Daughter';font-size: 22px;
+      fosnt-family: 'Architects Daughter';font-size: 22px;
     }
       
     div.card {
@@ -29,10 +29,10 @@
     }
     
     .button {
-    background-color: #4e8ee8;
+    background-color: #262D69;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
