--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
     <style>
     body {
-      fosnt-family: 'Architects Daughter';font-size: 22px;
+      font-family: 'Architects Daughter';font-size: 22px;
     }
       
     div.card {
@@ -37,6 +37,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    font-family: 'Architects Daughter';
     margin: 4px 2px;
     cursor: pointer;
     }
