--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="card">
   <div class="header">
-   <h1><div id="day"></div></h1>
+   <p>Rugeli's Adventskalender 2018</p>
   </div>
 
   <div class="container" id="container">
