--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <hr>
     <p id="present"></p>
   </div>
+  <p id="debug"></p>
 </div>  
    
-<p id="debug" style="text-align: center;"></p>
 </body>
 </html>
