--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
   <p id="debug"></p>
 </div>  
    
- <hr>
- <p style="font-size: 8px;">Ab 12.00 Uhr mittags ist jeweils ein zusätzlicher Hinweis verfügbar. 
+ <br>
+ <p style="font-size: 12px;">Hinweise: Ab 12.00 Uhr mittags ist jeweils ein zusätzlicher Hinweis verfügbar. 
   Alle Lösungen müssen ohne Leerschläge und in Kleinbuchstaben eingegeben werden. Viel Erfolg mi Schatz!</p>
 </body>
 </html>
