--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="func.js" /></script>
-    <title>Rugeli's Adventsrätsel :-)</title>
+    <title>Rugelis Adventsrätsel :-)</title>
     <link href='https://fonts.googleapis.com/css?family=Architects Daughter' rel='stylesheet'>
   
     <style>
